--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 					return (
 						<div>
 							<h1> World's famous Zoos</h1>
-							<form method="POST">
+							<form>
 								<input value={this.state.name} name="name" placeholder="write down your favorite zoo" />
 								<button>Save</button>
 							</form>
