remove onsave from this

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					this.setState({zoos})
 				}
 				render() {
-					const { onDelete, onSave } = this
+					const { onDelete } = this
 					return (
 						<div>
 							<h1> World's famous Zoos</h1>
