remove onSave on return

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 								{
 									this.state.zoos.map(zoo => {
 										return (
-											<Zoo zoo={zoo} onDelete={ onDelete } onSave={ onSave }/>
+											<Zoo zoo={zoo} onDelete={ onDelete }/>
 										)
 									})
 								}
